[Spring 지하철 노선도 - 3단계] 리차드(전형중) 미션 제출합니다. (#308)
* refactor(line, station): equals&hashCode 기본으로 변경

* fix(test): @JdbcTest 와 함께 중복으로 선언된 @Transactional 애너테이션 제거

* refactor(test): E2E 생성 테스트 시, 응답 내부 값까지 확인하도록 개선

* refactor(controller): 불필요한 produces 선언 제거

* refactor(test): 사용되지 않는 변수 선언 제거

* feat(exception): 전역 예외 메시지 추가

* feat(station-service): 지하철역 저장시, 역이름 중복 검증 구현

* refactor(exception): 지하철 역 이름 중복 시, 중복된 입력값을 함께 보여주도록 개선

* refactor(line-table): LINE.color unique 제약 추가, SECTION.line_id FK 제약 추가

* test(station-acceptance): 중복 지하철역 저장 시 응답 메시지 추가 확인하도록 테스트 개선

* refactor(line): Line 도메인 객체 동등성 정의 기준 변경 : name -> name + color

* refactor(test): 서비스 테스트 SpringBootTest에서 JdbcTest로 개선

* refactor(line): 이름만 같아도 같은 노선으로 동등하게 취급하기 위한 equals&hashCode 재정의

* fix(controller-advice): SubwayControllerAdvice 로 네이밍 개선. 예외 응답 포맷 균일화

* refactor(exception): 예외 계층화. 커스텀 예외 3가지를 상속하도록 개선 -유효성검증, 자원없음, 확인불가

* refactor(line-service): 노선 추가 시 이름, 색상 중복 유효성 검증 기능 구현

* refactor(controller-advice): 존재하지 않는 자원에 대한 조회, 수정, 삭제 요청 시 NOT_FOUND 응답코드를 반환하도록 개선

* docs(readme): 요구사항 목록 작성

* fix(abstract-repository): deprecated 된 인스턴스 생성 메서드 대체. Class#newInstance -> Constructor#newInstance

* refactor(exception): 예외 네이밍 개선. StationDuplicateException -> StationNameDuplicateException

* refactor(exception): 예외 메시지 구체화. 이미 존재하는 노선 -> 미이 존재하는 노선 이름

* refactor(test): 테스트 코드 내 의존주입 방법 개선. @TestConstructor를 이용해 생성자 주입 사용.

* style(test): 테스트 코드 전체 스타일 균일화.

* refactor(service-request): 불필요한 기본 생성자 제거

* refactor(validation): API 요청값 검증을 위한 Valid 애너테이션 구현

* refactor(exception): 예외 계층별 패키지 분리

* refactor(line): 노선 추가 요청 시 제약조건 추가. NonNull, Min

* refactor(controller-advice): 대상 컨트롤러 명시 제거

* fix(repository): 필드명 camelCase -> snake_case 변환 로직 추가

* feat(section): 구간 등록, 삭제 구현

* refactor(dao): Repository, Dao 계층 분리 및 infra 패키지로 이동

* test(sections): Sections 생성 테스트 구현

* feat(sections): 구간 추가 도메인 객체 구현

* feat(sections): 구간 추